# parchive

./: README.md  config.yaml  pyproject.toml
app/: __init__.py  main.py
app/data/: urls.db
app/models/: models.py
app/services/: ai_service.py  database.py
app/utils/: __init__.py  config.py  episode_helper.py  xml_parser.py
tests/: __init__.py  test_reindex.py
